# donner

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .hdoc.toml  .lldbinit  AGENTS.md  BUILD  BUILD.bazel  CLAUDE.md  CLIPMASK_SUMMARY.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Doxyfile  LICENSE  MODULE.bazel  README.md  RELEASE_NOTES.md  SECURITY.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  banned_feature_review.md  codecov.yml  donner-svg.code-workspace  donner_splash_v0_8.provenance.md  dprint.json  drag.tracy  googletest.patch  jest.config.cjs  package.json  refactor.py  renovate.json  zoom-out-drag-jump.rnr
build_defs/: BUILD  BUILD.bazel  banned_deps.bzl  check_banned_deps.sh  check_banned_patterns.py  check_banned_patterns_tests.py  check_clang_format.py  dep_audit.bzl  embed_resources.bzl  geode_test_scheduling_tests.py  include_cleaner.bzl  include_cleaner.clang-tidy  licenses.bzl  rules.bzl  visibility.bzl
build_defs/teleport_p2996_toolchain/: BUILD.bazel  extensions.bzl
donner/base/: BUILD  BUILD.bazel  BezierUtils.cc  BezierUtils.h  Box.h  CMakeLists.txt  ChunkedString.h  Color.cc  Color.h  CompileTimeMap.h  CompileTimeMapExamples.md  CompilerConfig.h  DiagnosticRenderer.cc  DiagnosticRenderer.h  EcsRegistry.h  EcsRegistry_fwd.h  FailureSignalHandler.cc  FailureSignalHandler.h  FileOffset.h  FillRule.h  FormatNumber.cc  FormatNumber.h  Length.h  MathUtils.h  OptionalRef.h  ParseDiagnostic.cc  ParseDiagnostic.h  ParseError.cc  ParseError.h  ParseResult.h  ParseWarningSink.h  Path.cc  Path.cc.bak  Path.h  PathOps.cc  PathOps.h  RcString.h  RcStringOrRef.h  RelativeLengthMetrics.h  SmallVector.h  (+6 more)
donner/benchmarks/: BUILD.bazel  CssParsePerfBench.cpp  DetachedSubtreeCollectionBench.cpp  RenderSnapshotBench.cpp  SVGElementHandleBench.cpp  SkiaFilterPerfBench.cpp  SkiaRenderPerfBench.cpp  StructuredEditingPerfBench.cpp  TinySkiaRenderPerfBench.cpp  run_dom_lifetime_perf_bench.sh  run_filter_perf_compare.sh  run_render_perf_compare.sh
donner/css/: BUILD  BUILD.bazel  CMakeLists.txt  CSS.cc  CSS.h  Color.cc  Color.h  ColorProfile.cc  ColorProfile.h  ComponentValue.cc  ComponentValue.h  Declaration.cc  Declaration.h  FontFace.h  Rule.cc  Rule.h  Selector.cc  Selector.h  SelectorTraversal.h  Specificity.h  Stylesheet.h  Token.cc  Token.h  WqName.h
donner/editor/: AddressBar.cc  AddressBar.h  AddressBarDispatcher.cc  AddressBarDispatcher.h  AddressBarStatus.h  AsyncRenderer.cc  AsyncRenderer.h  AsyncSVGDocument.cc  AsyncSVGDocument.h  AttributeWriteback.cc  AttributeWriteback.h  BUILD.bazel  CanvasScrollbars.cc  CanvasScrollbars.h  ChangeClassifier.cc  ChangeClassifier.h  ClipboardInterface.h  CommandQueue.cc  CommandQueue.h  CompositedPresentation.h  CompositorDebugPanel.cc  CompositorDebugPanel.h  ContentSniffer.cc  ContentSniffer.h  CurlAvailability.cc  DialogPresenter.cc  DialogPresenter.h  DisclosureChevron.cc  DisclosureChevron.h  DocumentSave.cc  DocumentSave.h  DocumentSyncController.cc  DocumentSyncController.h  DragCoalesce.h  EditorApp.cc  EditorApp.h  EditorBackendClient.h  EditorBackendClient_InProcess.cc  EditorBackendClient_Session.cc  EditorCommand.h  (+160 more)
donner/gpu/: BUILD.bazel  CheckedArithmetic.h  CommandEncoder.cc  CommandEncoder.h  Commands.h  Descriptors.cc  Descriptors.h  Device.cc  Device.h  GpuError.cc  GpuError.h  GpuLimits.h  GpuResult.h  Handles.h  RecordingDevice.cc  RecordingDevice.h
donner/svg/: AllSVGElements.h  BUILD  BUILD.bazel  DocumentState.h  DonnerController.cc  DonnerController.h  ElementType.cc  ElementType.h  SVG.h  SVGAElement.cc  SVGAElement.h  SVGAnimateElement.cc  SVGAnimateElement.h  SVGAnimateMotionElement.cc  SVGAnimateMotionElement.h  SVGAnimateTransformElement.cc  SVGAnimateTransformElement.h  SVGCircleElement.cc  SVGCircleElement.h  SVGClipPathElement.cc  SVGClipPathElement.h  SVGDefsElement.cc  SVGDefsElement.h  SVGDescElement.cc  SVGDescElement.h  SVGDocument.cc  SVGDocument.h  SVGDocumentHandle.h  SVGElement.cc  SVGElement.h  SVGElementNames.h  SVGEllipseElement.cc  SVGEllipseElement.h  SVGFEBlendElement.cc  SVGFEBlendElement.h  SVGFEColorMatrixElement.cc  SVGFEColorMatrixElement.h  SVGFEComponentTransferElement.cc  SVGFEComponentTransferElement.h  SVGFECompositeElement.cc  (+113 more)
examples/: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  PngEncoder.h  WORKSPACE.TODO  WORKSPACE.bzlmod  custom_css_parser.cc  fill.cpp  gamma.cpp  geode_embed.cc  geode_embed_surface.h  geode_embed_surface_linux.cc  geode_embed_surface_macos.mm  linear_gradient.cpp  mask.cpp  render_test.cc  svg_animation.cc  svg_filter_interaction.cc  svg_interactivity.cc  svg_text_interaction.cc  svg_to_png.cc  svg_tree_interaction.cc  svg_viewer.cc  svg_viewer_shell.html  svg_viewer_test.mjs  wasm_reproducer.cc
examples/cmake_consumer/: CMakeLists.txt  README.md  main.cc
experimental/viewer/: BUILD  BUILD.bazel  TransformInspector.cc  TransformInspector.h  svg_animation_viewer.cc  svg_interactivity_viewer.cc  (+1 more)
rust_comparison/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel  rust_ffi.h  tiny_skia_parity_tests.cc
src/: BUILD.bazel
tests/: BUILD.bazel
tools/: BUILD  BUILD.bazel  ansi_terminal_to_svg.py  binary_size.sh  binary_size_analysis.py  binary_size_config.bloaty  binary_size_tests.py  build_docs.sh  build_sourcegraph_index.sh  check_design_doc_provenance.py  check_design_doc_provenance_tests.py  check_lcov_report.py  check_lcov_report_tests.py  ci_determine_targets.py  ci_diagnostics.sh  ci_diagnostics_report.py  ci_diagnostics_report_tests.py  cloc.sh  coverage.sh  coverage_instrumentable_targets.py  coverage_instrumentable_targets_tests.py  coverage_variant_trim.py  coverage_variant_trim_tests.py  diff_files.py  donner-svg  doxygen.sh  embed_resources.py  embed_resources_tests.py  env-setup.sh  feature_loc.py  feature_loc_tests.py  filter_coverage.py  filter_coverage_tests.py  generate_build_report.py  generate_build_report_tests.py  hdoc.sh  lcov_metrics.py  lcov_metrics_tests.py  list_libclang_symbols.sh  llm-bazel-wrap.sh  (+11 more)
(+2518 files in other folders)
