##
## Main library
##
load("//build_defs:rules.bzl", "donner_cc_library")

#
# Donner main library, packages together the SVG library and associated renderer.
#
donner_cc_library(
    name = "donner",
    visibility = ["//visibility:public"],
    deps = [
        "//donner/svg/renderer",
    ],
)

##
## Devtools
##

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "donner_icon.svg",
        "donner_splash.svg",
        "MODULE.bazel",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "debug_build",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "fast_build",
    values = {"compilation_mode": "fastbuild"},
)

config_setting(
    name = "release_build",
    values = {"compilation_mode": "opt"},
)

# Explicit platform targets for `--config=re-linux` / `--config=re-macos`
# in the developer's `~/.bazelrc`. The bazel-re1 remote-execution worker
# runs Linux aarch64; when Bazel sees `--platforms=//:linux_aarch64`
# + `--extra_execution_platforms=//:linux_aarch64` it pairs that with
# the hermetic llvm_toolchain sysroot registered in MODULE.bazel and
# dispatches actions to the remote worker. Kept in the root BUILD so
# the reference path matches what the bazelrc expects.
platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

filegroup(
    name = "docs_files",
    srcs = glob([
        "docs/**/*.md",
        "docs/**/*.svg",
    ]),
    visibility = ["//tools:__pkg__"],
)

# Logo SVGs, which are consumed by the renderer tests.
filegroup(
    name = "logo_svgs",
    srcs = glob([
        "*.svg",
    ]),
    visibility = [
        "//donner:__subpackages__",
    ],
)
