##
## Platform definitions
##
## Named target platforms for local and remote Bazel builds.

##
## Main library
##
load("//build_defs:rules.bzl", "donner_cc_library")

platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "macos_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

#
# Donner main library, packages together the SVG library and associated renderer.
#
donner_cc_library(
    name = "donner",
    visibility = ["//visibility:public"],
    deps = [
        "//donner/svg/renderer",
    ],
)

##
## Devtools
##

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "donner_icon.svg",
        "donner_splash.svg",
        "donner_splash_v0_8.svg",
        "donner_splash_v0_8_editable.svg",
        "MODULE.bazel",
        ".bazelrc",
        "zoom-out-drag-jump.rnr",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "debug_build",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "fast_build",
    values = {"compilation_mode": "fastbuild"},
)

config_setting(
    name = "release_build",
    values = {"compilation_mode": "opt"},
)

filegroup(
    name = "docs_files",
    srcs = glob([
        "docs/**/*.md",
        "docs/**/*.svg",
    ]),
    visibility = ["//tools:__pkg__"],
)

# Logo SVGs, which are consumed by the renderer tests.
filegroup(
    name = "logo_svgs",
    srcs = glob([
        "*.svg",
    ]),
    visibility = [
        "//donner:__subpackages__",
    ],
)
