"""Donner SVG Editor & Engine: an SVG editor application plus a reusable SVG rendering, geometry, and DOM engine.

A C++20 SVG editor plus rendering, geometry, and toolkit libraries providing full SVG DOM
access with complete rendering support including text, filters, and animation."""

# ReleaseBot: bump `version` to the published v0.8 version string when stamping the
# "Donner SVG Editor & Engine" release. Currently the v0.8 pre-release line; bump to the
# final "0.8.0" at stamp time.
module(
    name = "donner",
    version = "0.8.0-pre",
)

# Donner build-time feature configuration.
# Downstream consumers can override these defaults via donner.configure() in their MODULE.bazel.
donner = use_extension("//config:extensions.bzl", "donner")
donner.configure()
use_repo(donner, "donner_config")

local_repository = use_repo_rule("//third_party:bazel/local.bzl", "local_repository")

new_local_repository = use_repo_rule("//third_party:bazel/local.bzl", "new_local_repository")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# Build dependencies
bazel_dep(name = "apple_support", version = "2.7.0", repo_name = "build_bazel_apple_support")  # Must be before rules_cc
bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")

# rules_foreign_cc historically drove Dawn's CMake build. The Geode backend
# now consumes prebuilt `wgpu-native` tarballs via `http_archive`, so the
# rule is no longer load-bearing — it is kept only because other vendored
# third-party projects still import it. Revisit if it goes completely unused.
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

##
## Non-BCR dependencies (dev-only extension)
##
# harfbuzz, woff2, wgpu-native, and bazel_clang_tidy all live
# behind `git_repository`/`new_git_repository` calls that are not permitted in
# modules published to the Bazel Central Registry. We hide them behind a
# module extension flagged `dev_dependency = True`, so downstream BCR consumers
# never see them. When donner is the root module (local dev or CI), the
# extension runs and fetches everything exactly as before.
#
# Every target in donner that references one of these repos MUST be behind a
# `target_compatible_with` guard on the corresponding config_setting, so that
# BCR consumers doing `bazel build @donner//...` simply skip those targets
# rather than failing to resolve the missing repos. See
# third_party/bazel/non_bcr_deps.bzl for the list.
non_bcr_deps = use_extension("//third_party:bazel/non_bcr_deps.bzl", "non_bcr_deps", dev_dependency = True)
use_repo(
    non_bcr_deps,
    "bazel_clang_tidy",
    "harfbuzz",
    "sysroot_linux_aarch64",
    "sysroot_linux_x86_64",
    "tracy",
    "wgpu_native_linux_aarch64",
    "wgpu_native_linux_x86_64",
    "wgpu_native_macos_aarch64",
    "wgpu_native_macos_x86_64",
    "woff2",
)

# Curated embedded Google Fonts (Design 0013 W3). Fetched at build time via
# pinned-hash http_file repos; dev_dependency so BCR consumers never fetch them
# (only the editor links the embedded bytes). See third_party/google_fonts.
google_fonts = use_extension("//third_party/google_fonts:fonts.bzl", "google_fonts", dev_dependency = True)
use_repo(
    google_fonts,
    "gfont_bebas_neue",
    "gfont_bitter",
    "gfont_inter",
    "gfont_jetbrains_mono",
    "gfont_lato",
    "gfont_lora",
    "gfont_montserrat",
    "gfont_open_sans",
    "gfont_oswald",
    "gfont_pacifico",
    "gfont_playfair_display",
    "gfont_roboto_mono",
)
##
## Third-party dependencies
##

# Tiny-skia dependencies
local_repository(
    name = "tiny-skia-cpp",
    path = "third_party/tiny-skia-cpp",
)

bazel_dep(name = "rules_license", version = "1.0.0")

# Vulkan-Headers for the donner/gpu Vulkan backend (design 0053). Headers only:
# the library compiles everywhere; the Vulkan loader is linked (and the backend
# executes) only on Linux test/tool targets.
bazel_dep(name = "vulkan_headers", version = "1.4.349")
bazel_dep(name = "freetype", version = "2.13.3.bcr.1")
bazel_dep(name = "libpng", version = "1.6.54")

# Enable FreeType's PNG support for CBDT color emoji bitmaps.
single_version_override(
    module_name = "freetype",
    patch_strip = 1,
    patches = [
        "//third_party/patches:freetype-enable-png-module.patch",
        "//third_party/patches:freetype-enable-png-build.patch",
    ],
    version = "2.13.3.bcr.1",
)

# entt is vendored as a git subtree under third_party/entt (pinned at upstream
# tag v3.16.0). Using local_repository keeps entt's own BUILD.bazel, which
# already exposes an `//:entt` alias to `//src:entt`. When we need to bump
# entt, use `git subtree pull --prefix=third_party/entt https://github.com/skypjack/entt <tag> --squash`.
local_repository(
    name = "entt",
    path = "third_party/entt",
)

local_repository(
    name = "frozen",
    path = "third_party/frozen",
)

new_local_repository(
    name = "stb",
    build_file = "//third_party:BUILD.stb",
    path = "third_party/stb",
)

bazel_dep(name = "zlib", version = "1.3.2")
single_version_override(
    module_name = "zlib",
    patch_strip = 1,
    patches = ["//third_party/patches:zlib-detect-unistd.patch"],
    version = "1.3.2",
)

# brotli is required by @woff2 (see non_bcr_deps.bzl); text-full only.
bazel_dep(name = "brotli", version = "1.2.0.bcr.1")

##
## Test dependencies
##
# re2 is not used directly, but is selected by googletest and transitive test dependencies.
bazel_dep(name = "re2", version = "2025-11-05.bcr.1", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_gtest")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.8.0", dev_dependency = True)
bazel_dep(name = "pixelmatch-cpp17", version = "1.0.3", dev_dependency = True)

new_local_repository(
    name = "css-parsing-tests",
    build_file = "//third_party:BUILD.css-parsing-tests",
    path = "third_party/css-parsing-tests",
)

# The wgpu-native prebuilts are fetched via the non_bcr_deps module extension
# declared above — they are not available when donner is consumed from BCR. The
# resvg-test-suite goldens are now vendored in-tree under
# third_party/resvg-test-suite/ so they ship in the source archive.

bazel_dep(name = "rules_python", version = "2.2.0", dev_dependency = True)

# Hermetic Python toolchain. Without this, rules_python's py_binary targets
# fall back to `/usr/bin/env python3` on the host — which is fine for local
# dev on dev1, but on the Bazel remote-execution sandbox (NixOS) no such
# host interpreter is available. Registering `python.toolchain()` makes
# rules_python ship a prebuilt CPython through the action cache so RE
# workers execute the same interpreter as local builds.
python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

#
# Toolchain
#

bazel_dep(name = "toolchains_llvm", version = "1.8.0", dev_dependency = True)

# To use a local copy of the toolchains_llvm repository, uncomment the following.
# local_path_override(
#     module_name = "toolchains_llvm",
#     path = "../toolchains_llvm",
# )

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)

# Default host-detected toolchain for local builds. Keep the repo names stable
# for existing labels such as `@llvm_toolchain_llvm`.
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "21.1.6",
)

# Hermetic Linux sysroots: keep the toolchain self-contained on Bazel
# remote-execution workers (bazel-re1, NixOS) that lack system glibc
# headers. See third_party/bazel/non_bcr_deps.bzl for the tarballs.
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_aarch64//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_x86_64//:sysroot",
    targets = ["linux-x86_64"],
)

# Remote execution needs exec-platform-specific LLVM downloads. Otherwise a
# macOS client can upload a Mach-O clang to a Linux worker.
llvm.toolchain(
    name = "llvm_toolchain_linux_aarch64",
    exec_arch = "aarch64",
    exec_os = "linux",
    llvm_version = "21.1.6",
)
llvm.sysroot(
    name = "llvm_toolchain_linux_aarch64",
    label = "@sysroot_linux_aarch64//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.sysroot(
    name = "llvm_toolchain_linux_aarch64",
    label = "@sysroot_linux_x86_64//:sysroot",
    targets = ["linux-x86_64"],
)

# Keep the Linux x86_64 variant ready for future workers and local parity.
llvm.toolchain(
    name = "llvm_toolchain_linux_x86_64",
    exec_arch = "x86_64",
    exec_os = "linux",
    llvm_version = "21.1.6",
)
llvm.sysroot(
    name = "llvm_toolchain_linux_x86_64",
    label = "@sysroot_linux_aarch64//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.sysroot(
    name = "llvm_toolchain_linux_x86_64",
    label = "@sysroot_linux_x86_64//:sysroot",
    targets = ["linux-x86_64"],
)

# Do not register a macOS LLVM exec variant. //donner/editor needs ObjC for
# glfw's Cocoa backend, so macOS exec uses apple_support's Xcode toolchain.

use_repo(
    llvm,
    "llvm_toolchain",
    "llvm_toolchain_linux_aarch64",
    "llvm_toolchain_linux_x86_64",
    "llvm_toolchain_llvm",
)

# NOTE: To use any of these toolchains specify --config=latest_llvm (which
# registers them via --extra_toolchains in .bazelrc). This is enabled by
# default on Linux, disabled by default on macOS.
# register_toolchains("@llvm_toolchain//:all", dev_dependency = True)

bazel_dep(name = "zstd", version = "1.5.7.bcr.1", dev_dependency = True)

#
# Devtools
#

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor",
)

bazel_dep(name = "rules_proto", version = "7.1.0", dev_dependency = True)
bazel_dep(name = "protobuf", version = "30.2", dev_dependency = True)
single_version_override(
    module_name = "protobuf",
    version = "30.2",
)

bazel_dep(name = "bloaty", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "bloaty",
    commit = "a655c418811ef5097e37a562ce62f925bda72d88",
    remote = "https://github.com/jwmcglynn/bloaty",
)

#
# WebAssembly (Emscripten SDK)
#

bazel_dep(name = "emsdk", version = "5.0.5", dev_dependency = True)

# Keep emsdk's hermetic Python runnable under macOS remote execution.
single_version_override(
    module_name = "emsdk",
    patch_strip = 1,
    patches = ["//third_party/patches:emsdk_env_sh_dyld_library_path.patch"],
    version = "5.0.5",
)

#
# SVG Viewer
#

bazel_dep(name = "imgui", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "imgui",
    commit = "ee1deccc08c14ab1e6abcfa6aae11d915763cdb7",
    patch_strip = 1,
    patches = [
        "//third_party/patches:imgui_bazel_build_files.patch",
        "//third_party/patches:imgui_wgpu_texture_cache.patch",
        "//third_party/patches:imgui_wgpu_premultiplied_textures.patch",
        "//third_party/patches:imgui_wgpu_emscripten_dawn.patch",
        "//third_party/patches:imgui-explicit-raw-memory.patch",
    ],
    remote = "https://github.com/ocornut/imgui",
)

bazel_dep(name = "glfw", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "glfw",
    commit = "ed6452b13c76f7b4da216a9952bc7837aeb0f031",
    patch_strip = 1,
    patches = [
        "//third_party/patches:glfw_bazel_build_files.patch",
    ],
    remote = "https://github.com/glfw/glfw",
)
